Inseriando img tela app

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="principal">
-<img src="img/Neoenergia.png"><br><br>
+<img src="img/LogoNeoenergia.png"><br><br>
 <h1>Nossos serviços na <br> palma da sua mão</h1><br>
 <h4>Seja bem-vindo!</h4><br><br>
 
